# vercel-fleet

./: .gitignore  README.md  pyproject.toml
.claude/commands/: vercel-fleet.md
.github/workflows/: ci.yml
src/vercel_fleet/: __main__.py  anomalies.py  auth.py  cli.py  client.py  denylist.py  mcp_server.py  render.py  store.py  sync.py
src/vercel_fleet/commands/: dark.py  deploys.py  doctor.py  install_timer.py  overview.py  project.py  refs.py  sync_cmd.py
tests/: conftest.py  test_anomalies.py  test_auth.py  test_cli.py  test_client.py  test_denylist.py  test_mcp_server.py  test_render.py  test_store.py  test_sync.py
